PCS BAckup 26Dec2023/Backup-Source/objects/Account.object
<CustomObject>
    <fields>
        <fullName>texcellency__DefHC_HospitalID__c</fullName>
        <label>Definitive ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Hospital_Name__c</fullName>
        <description>DefinitiveHC Hospital Name</description>
        <inlineHelpText>Hospital Name</inlineHelpText>
        <label>DHC Hospital Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Hospital_Profile__c</fullName>
        <description>DefinitiveHC Hospital Profile</description>
        <inlineHelpText>DefinitiveHC Hospital Profile</inlineHelpText>
        <label>DHC Provider Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Hospital_Type__c</fullName>
        <label>DHC Hospital Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_MeaningfulUseStatus__c</fullName>
        <label>DHC Meaningful Use Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_MedicareProviderNumber__c</fullName>
        <label>DHC Medicare Provider Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NetMedicareRevenue__c</fullName>
        <label>DHC Net Medicare Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NetPatientRev__c</fullName>
        <label>DHC Net Patient Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NetworkID__c</fullName>
        <description>Definitive HC Network ID</description>
        <label>DHC Network ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Network_Name__c</fullName>
        <description>Name of the network to which the hospital belongs to.</description>
        <label>DHC Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumAffiliatedPhysicians__c</fullName>
        <label>DHC # of Affiliated Physicians</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumBeds__c</fullName>
        <description>Number of Beds in the hospital</description>
        <label>DHC # of Beds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumDischarges__c</fullName>
        <label>DHC # of Discharges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumEmployees__c</fullName>
        <label>DHC # of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumHospitalsInNetwork__c</fullName>
        <label>DHC # of Hospitals in Network</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumMedicareBeds__c</fullName>
        <label>DHC # of Medicare Beds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumOperatingRooms__c</fullName>
        <label>DHC # of Operating Rooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_OperatingIncome__c</fullName>
        <label>DHC Operating Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_OptOutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an account has opted out of automatic sync.</description>
        <label>DHC Opt Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_OwnershipStatus__c</fullName>
        <label>DHC Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Parent_NetworkID__c</fullName>
        <description>Parent Network ID</description>
        <label>DHC Parent Network ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Parent_Network_Name__c</fullName>
        <description>Name of the Parent Network</description>
        <label>DHC Parent Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_PayorMixPctMedicaid__c</fullName>
        <label>DHC Payor Mix % Medicaid</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_PayorMixPctMedicare__c</fullName>
        <label>DHC Payor Mix % Medicare</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_PayorMixPctPrivateSelf__c</fullName>
        <label>DHC Payor Mix % Private/Self/Other</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Phone__c</fullName>
        <label>DHC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_State__c</fullName>
        <label>DHC State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_SyncTime__c</fullName>
        <description>Last time the account data was synced with DefHC database.</description>
        <label>DHC Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_TotalMedicareCharges__c</fullName>
        <label>DHC Total Medicare Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Website__c</fullName>
        <label>DHC Provider Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_ZipCode__c</fullName>
        <label>DHC Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accounts_Created_in_Last_One_Day</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Phoenix_SAPCode__c</columns>
        <columns>Phoenix_BID_Team_Account_Type__c</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <label>Accounts Created in Last One Day</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>DEA__c</columns>
        <columns>GPO1__c</columns>
        <columns>Wholesaler1__c</columns>
        <columns>IPA__c</columns>
        <columns>Phoenix_IPA_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Hospital</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Bid_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Phoenix_Customer_Service_Approver__c</columns>
        <columns>Phoenix_Contracts_Approver__c</columns>
        <columns>Phoenix_Cash_Discount__c</columns>
        <columns>Phoenix_Fee__c</columns>
        <columns>Phoenix_Rebates__c</columns>
        <columns>Phoenix_Preferred_Wholesaler__c</columns>
        <columns>Phoenix_Indirect_Cash_Discount__c</columns>
        <columns>Phoenix_VIP__c</columns>
        <columns>Phoenix_Customer_Class_Bid_Template__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Bid_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Bid Accounts</label>
    </listViews>
    <listViews>
        <fullName>Buying_Customer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>PARENT_NAME</columns>
        <columns>Phoenix_Name2__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Phoenix_BID_Team_Account_Type__c</columns>
        <columns>Phoenix_Customer_Group_Type__c</columns>
        <columns>Phoenix_SAPCode__c</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>Phoenix_Is_IPA_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_BID_Team_Account_Type__c</field>
            <operation>equals</operation>
            <value>Buying Group</value>
        </filters>
        <label>Buying Customer</label>
    </listViews>
    <listViews>
        <fullName>Child_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>Phoenix_Account_Hierarchy_Type__c</columns>
        <columns>Class_Of_Trade__c</columns>
        <columns>Phoenix_BID_Team_Account_Type__c</columns>
        <columns>Phoenix_Customer_Group_Type__c</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>Phoenix_SAPCode__c</columns>
        <columns>Phoenix_Is_IPA_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Account_Hierarchy_Type__c</field>
            <operation>equals</operation>
            <value>Child</value>
        </filters>
        <label>Child Accounts</label>
    </listViews>
    <listViews>
        <fullName>Customer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>PARENT_NAME</columns>
        <columns>Phoenix_Name2__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Phoenix_BID_Team_Account_Type__c</columns>
        <columns>Phoenix_Customer_Group_Type__c</columns>
        <columns>Phoenix_SAPCode__c</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>Phoenix_Is_IPA_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_BID_Team_Account_Type__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Customer</label>
    </listViews>
    <listViews>
        <fullName>IPA_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Phoenix_IPA_Contract__c</columns>
        <columns>Phoenix_RCA_Agreement__c</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>Phoenix_Name2__c</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>Phoenix_Is_IPA_Account__c</columns>
        <columns>Phoenix_Contracts_Approver__c</columns>
        <columns>Phoenix_Customer_Service_Approver__c</columns>
        <columns>GPO1__c</columns>
        <columns>GPO2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_IPA_Member__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.BidAccounts</value>
        </filters>
        <label>IPA Accounts</label>
    </listViews>
    <listViews>
        <fullName>IPA_Members</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Phoenix_Is_IPA_Member__c</columns>
        <columns>Phoenix_Parent_IPA__c</columns>
        <columns>Direct_Indirect__c</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>Record_Id__c</columns>
        <columns>Phoenix_Name2__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Phoenix_BID_Team_Account_Type__c</columns>
        <columns>Phoenix_Customer_Group_Type__c</columns>
        <columns>Phoenix_SAPCode__c</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>Phoenix_Is_IPA_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_IPA_Member__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IPA Members</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>GPO1__c</columns>
        <columns>Wholesaler1__c</columns>
        <columns>X340b_Facility__c</columns>
        <columns>Phoenix_Customer_Group_Type__c</columns>
        <columns>Phoenix_BID_Team_Account_Type__c</columns>
        <columns>Phoenix_SAPCode__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>OTC_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Phoenix_Is_OTC_Customer__c</columns>
        <columns>Phoenix_Customer_Service_Approver__c</columns>
        <columns>Phoenix_Contracts_Approver__c</columns>
        <columns>Phoenix_Preferred_Wholesaler__c</columns>
        <columns>Phoenix_Customer_Class_Bid_Template__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_OTC_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>OTC Accounts</label>
    </listViews>
    <listViews>
        <fullName>Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>Phoenix_Contract_Number__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Phoenix_Name2__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Phoenix_BID_Team_Account_Type__c</columns>
        <columns>Phoenix_Customer_Group_Type__c</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>Phoenix_SAPCode__c</columns>
        <columns>Phoenix_Is_IPA_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ACCOUNT_NUMBER</field>
            <operation>equals</operation>
        </filters>
        <label>Partner Accounts</label>
    </listViews>
    <listViews>
        <fullName>RCA_Agreements</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Phoenix_Name2__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Phoenix_Is_Bid_Account__c</columns>
        <columns>Phoenix_Customer_Class_Bid_Template__c</columns>
        <columns>Phoenix_RCA_Agreement__c</columns>
        <columns>DEA__c</columns>
        <columns>Phoenix_HIN__c</columns>
        <columns>Phoenix_Rebates__c</columns>
        <columns>Phoenix_Fee__c</columns>
        <columns>Phoenix_Cash_Discount__c</columns>
        <columns>Phoenix_VIP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_RCA_Agreement__c</field>
            <operation>notContain</operation>
        </filters>
        <label>RCA Agreements</label>
    </listViews>
    <listViews>
        <fullName>texcellency__DHC_Hierarchy_Manager</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>texcellency__DefHC_HospitalID__c</columns>
        <columns>texcellency__DefHC_NetworkID__c</columns>
        <columns>texcellency__DefHC_Network_Name__c</columns>
        <columns>texcellency__DefHC_Parent_NetworkID__c</columns>
        <columns>texcellency__DefHC_Parent_Network_Name__c</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>texcellency__DefHC_HospitalID__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>texcellency__DefHC_NetworkID__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>DHC Hierarchy Manager</label>
    </listViews>
    <listViews>
        <fullName>texcellency__DefHC_Attached_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>texcellency__DefHC_HospitalID__c</columns>
        <columns>texcellency__DefHC_Hospital_Name__c</columns>
        <columns>texcellency__DefHC_Hospital_Type__c</columns>
        <columns>texcellency__DefHC_NetworkID__c</columns>
        <columns>texcellency__DefHC_Network_Name__c</columns>
        <columns>texcellency__DefHC_Parent_Network_Name__c</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>texcellency__DefHC_HospitalID__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>DefHC Attached Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>BidAccounts</fullName>
        <active>true</active>
        <description>Bid Customers</description>
        <label>Bid Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>OTC</fullName>
        <active>true</active>
        <description>OTC Customers</description>
        <label>OTC</label>
    </recordTypes>
    <recordTypes>
        <fullName>RX</fullName>
        <active>true</active>
        <description>Used for All RX Team Accounts</description>
        <label>RX</label>
    </recordTypes>
    <recordTypes>
        <fullName>SRX_Direct</fullName>
        <active>true</active>
        <description>SRX Direct Customer Record Type</description>
        <label>SRX Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>SRX_Direct_Indirect</fullName>
        <active>true</active>
        <label>SRX Direct &amp; Indirect</label>
    </recordTypes>
    <recordTypes>
        <fullName>SRX_Indirect</fullName>
        <active>true</active>
        <description>SRX</description>
        <label>SRX Indirect</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Bid_Account</fullName>
        <active>false</active>
        <errorConditionFormula>if(Phoenix_Is_Bid_Account__c,( OR(
Phoenix_Contracts_Approver__c == null,
Phoenix_Customer_Service_Approver__c == null,
ISPICKVAL(Phoenix_Customer_Class_Bid_Template__c,&quot;&quot;) 



)),false)</errorConditionFormula>
        <errorMessage>Please provide Contracts Approver, Customer Service Approver, Customer Class Bid  Template for Bid Account.</errorMessage>
    </validationRules>
</CustomObject>